2003-07-19  Havoc Pennington  <hp@pobox.com>

	* doc/gconf/gconf.sgml: doc fixes from Samuel Stringham
	#117830
	
2003-07-17  Havoc Pennington  <hp@redhat.com>

	* gconf/gconftool.c (do_recursive_unset): do a suggest_sync after 
	do_recursive_unset() (which shouldn't be necessary except that we 
	suck). Patch from Greg Hudson #117713

	* gconf/gconf-value.h: flags can't be 0, patch from 
	Greg Hudson, #117712

2003-07-07  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf-client.c:
	(recurse_subdir_list): the subdir list contains full
	paths, so don't append it to the full path. Fixes
	recursive preloading.
	(gconf_client_preload): don't get (and leak) the list
	of subdirs if we're only doing onelevel preloading.

2003-06-28  Dafydd Harries  <daf@parnassus.ath.cx>

	* gconf/gconftool.c (main): Slight extra option tweaking.

2003-06-26  Dafydd Harries  <daf@parnassus.ath.cx>

	* gconf/gonftool.c (main): Tidied up "--foo option must be used by
	itself" messages.

2003-06-26  Ross Golder  <ross@golder.org>

	* gconf/gconftool.c (do_dissociate_schema): Fixed a misleading
	string (#116042)
 	* gconf/gconftool.c (do_associate_schema): Prevent segfault when
	no args supplied (#116040)
 	* gconf/gconftool.c (do_dissociate_schema): Prevent segfault when
	no args supplied (#116040)
 
2003-06-26  Abel Cheung  <maddog@linux.org.hk>
  
  	* configure.in: Added "am" "mk" to ALL_LINGUAS.

2003-06-26  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "am" "mk" to ALL_LINGUAS.

2003-06-23  Havoc Pennington  <hp@redhat.com>

	* NEWS: update

	* configure.in: 2.3.3

2003-06-22  James M. Cape  <jcape@ignore-your.tv>

	* gconf/gconf-database.c: Fix for GCC 3.3 warning (fixes #115722).

2003-06-18	Mohammad DAMT  <mdamt@bisnisweb.com>

	* po/id.po: Added Indonesian translation
	* configure.in: Added "id" to ALL_LINGUAS

2003-06-18  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #73323

	* gconf/gconf-sources.h: moved GConfUnsetFlags enum...

	* gconf/gconf-value.h: ...to here.
